# pipeline_spark_pytest

./: .coverage  .coverage.daholive-Dell-G15-5510.26793.017905  README.md  main.py  pyproject.toml  requirements.txt  spark-3.3.1-bin-hadoop2.tgz  test_spark.ipynb
.ipynb_checkpoints/: test_spark-checkpoint.ipynb
src/: pipeline.py
tests/: test_pipeline_spark.py
